--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,19 @@
     padding: 0%;
     margin-top: 0%;
 }
-#class{
-    border: 2px solid black;
+ .class1{
+    border: 9px dotted rgb(93, 0, 255);
     padding: 30px;
     margin: 130px;
     width:50%;
     height: 130px;
+    background-color:rgb(221, 15, 90);
+    color: whitesmoke;
+    transition: 0.3s ease;
+} 
+.class1:hover{
+    background-color: aqua;
+    color: rgb(106, 42, 165);
+    transform: scaleX(-1.2);
+
 }
