--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,48 @@
-*{
-    padding: 0%;
-    margin-top: 0%;
-}
- .class1{
-    border: 9px dotted rgb(93, 0, 255);
-    padding: 30px;
-    margin: 130px;
-    width:50%;
-    height: 130px;
-    background-color:rgb(221, 15, 90);
-    color: whitesmoke;
-    transition: 0.3s ease;
-} 
-.class1:hover{
-    background-color: aqua;
-    color: rgb(106, 42, 165);
-    transform: scaleX(-1.2);
+.container{
+justify-content: space-around;
+align-items: center;
+display: flex;
+flex-wrap: wrap ;
+justify-content: center;
+padding: 100px;
 
+}
+.item{
+margin:10px;
+padding: 20px;
+justify-content: center;
+align-items: center;
+}
+
+.item1{
+  color: yellowgreen;
+  background-color: red;
+ padding: 50px;
+}
+.item2{
+  color: yellowgreen;
+  background-color: rgb(140, 0, 255);
+ padding: 50px;
+   justify-content: space-between;
+}
+.item3{
+  color: yellowgreen;
+  background-color: rgb(255, 0, 111);
+ padding: 50px;
+
+}
+.item4{
+  color: yellowgreen;
+  background-color: rgb(51, 255, 0);
+   padding: 50px;
+}
+.item5{
+  color: white;
+  background-color: rgb(34, 0, 255);
+   padding: 50px;
+}
+.item6{
+  color: white;
+  background-color: rgb(0, 200, 255);
+   padding: 50px;
 }
