--- a/styles.css
+++ b/styles.css
@@ -45,4 +45,9 @@ align-items: center;
   color: white;
   background-color: rgb(0, 200, 255);
    padding: 50px;
+   transition: 0.3s ease;
+}
+.item:hover{
+  background-color: brown;
+transform: scaleX(-1.2);
 }
