--- a/styles.css
+++ b/styles.css
@@ -1,53 +1,119 @@
+*{
+  padding: 0%;
+  margin: 0%;
+
+
+  
+}
+h1{
+  color: red;
+}
+h4{
+  color: blue;
+}
 .container{
-justify-content: space-around;
-align-items: center;
-display: flex;
-flex-wrap: wrap ;
-justify-content: center;
-padding: 100px;
-
+ 
+border: 2px  solid red;
 }
-.item{
-margin:10px;
-padding: 20px;
-justify-content: center;
-align-items: center;
-}
-
-.item1{
-  color: yellowgreen;
+.child-1,.child-2,.child-3,.child-4,.child-5{
+  width: 350px;
+  height: 30px;
   background-color: red;
- padding: 50px;
+  margin: 10px;
+  border-radius: 5px;
+  color:olivedrab;
+ 
+  
 }
-.item2{
-  color: yellowgreen;
-  background-color: rgb(140, 0, 255);
- padding: 50px;
-   justify-content: space-between;
+.child-a>div{
+  width: 90%;
+  background-color: burlywood;
+  height: 100%;
+  border-radius: 5px;
+  font-size: xx-large;
 }
-.item3{
-  color: yellowgreen;
-  background-color: rgb(255, 0, 111);
- padding: 50px;
+.child-b>div{
+  width: 80%;
+  background-color: burlywood;
+  height: 100%;
+  border-radius: 5px;
+  font-size: xx-large;
+}
+.child-c>div{
+  width: 80%;
+  background-color: burlywood;
+  height: 100%;
+  border-radius: 5px;
+  font-size: xx-large;
+}
 
+.child-d>div{
+  width: 75%;
+  background-color: burlywood;
+  height: 100%;
+  border-radius: 5px;
+  font-size: x-large;
 }
-.item4{
-  color: yellowgreen;
-  background-color: rgb(51, 255, 0);
-   padding: 50px;
+.child-e>div{
+  width: 50%;
+  background-color: burlywood;
+  height: 100%;
+  border-radius: 5px;
+  font-size: xx-large;
 }
-.item5{
-  color: white;
-  background-color: rgb(34, 0, 255);
-   padding: 50px;
+h1{
+  color: red;
 }
-.item6{
-  color: white;
-  background-color: rgb(0, 200, 255);
-   padding: 50px;
-   transition: 0.3s ease;
+h4{
+  color: blue;
 }
-.item:hover{
-  background-color: brown;
-transform: scaleX(-1.2);
+.container{
+ 
+border: 2px  solid red;
+}
+.child-1,.child-2,.child-3,.child-4,.child-5{
+  width: 350px;
+  height: 30px;
+  background-color: red;
+  margin: 10px;
+  border-radius: 5px;
+  color:olivedrab;
+ 
+  
+}
+.child-1>div{
+  width: 75%;
+  background-color: burlywood;
+  height: 100%;
+  border-radius: 5px;
+  font-size: xx-large;
+}
+.child-2>div{
+  width: 50%;
+  background-color: burlywood;
+  height: 100%;
+  border-radius: 5px;
+  font-size: xx-large;
+}
+.child-3>div{
+  width: 30%;
+  background-color: burlywood;
+  height: 100%;
+  border-radius: 5px;
+  font-size: xx-large;
+}
+
+.child-4>div{
+  width: 10%;
+  background-color: burlywood;
+  height: 100%;
+  border-radius: 5px;
+  font-size: x-large;
+}
+.child-5>div{
+  width: 100%;
+  background-color: burlywood;
+  height: 100%;
+  border-radius: 5px;
+  font-size: xx-large;
 }
